small bug on mobile view

--- a/src/Components/Footer/FooterLinks.module.css
+++ b/src/Components/Footer/FooterLinks.module.css
@@ -1,6 +1,6 @@
 .links {
   width: 100vw;
-  height: 15vh;
+  height: fit-content;
 
   display: flex;
   flex-direction: row;
